Infographics and texts

--- a/Invenietis.Web/Views/Home/AboutUs.fr.cshtml
+++ b/Invenietis.Web/Views/Home/AboutUs.fr.cshtml
@@ -37,9 +37,7 @@
                     <div class="shape" data-role="point"></div>
                 </div>
                 <div class="desc as-cell">
-                    Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper. Quisque blandit ipsum quam, non feugiat est venenatis
-                    a. Donec volutpat convallis neque at efficitur. Ut justo ex, fermentum in cursus sit amet, volutpat
-                    non leo.
+                    Création d'Invenietis
                 </div>
             </div>
             <div class="as-row hidden-xs">
@@ -145,19 +143,19 @@
         <h1 class="separator">Invenietis en chiffres</h1>
         <div class="row">
             <div class="col-sm-4 keydata">
-                <div class="high">Nous avons réalisé</div>
-                <div class="number">345</div>
+                <div class="high">Nous sommes une équipe de</div>
+                <div class="number">9</div>
+                <div class="low">passionnés</div>
+            </div>
+            <div class="col-sm-4 keydata">
+                <div class="high">Nous avons réalisé plus de</div>
+                <div class="number">150</div>
                 <div class="low">projets</div>
             </div>
             <div class="col-sm-4 keydata">
-                <div class="high">Une équipe de</div>
-                <div class="number">9</div>
-                <div class="low">collaborateurs passionnés</div>
-            </div>
-            <div class="col-sm-4 keydata">
-                <div class="high">Un chiffre d'affaire de</div>
-                <div class="number">200 000 000 €</div>
-                <div class="low">par an</div>
+                <div class="high">Nous avons travaillé avec plus de</div>
+                <div class="number">60</div>
+                <div class="low">clients différents</div>
             </div>
         </div>
     </div>
