--- a/Invenietis.Web/Views/Home/BusinessSystems.fr.cshtml
+++ b/Invenietis.Web/Views/Home/BusinessSystems.fr.cshtml
@@ -12,37 +12,50 @@
     <div class="content">
         <h1>Qu'est-ce qu'un système métier ?</h1>
         <p>
-            Fusce in interdum magna. Curabitur sed nisl tempus ipsum congue viverra. Nulla facilisi. Nunc euismod dolor a nulla porta,
-            iaculis condimentum ipsum euismod. Aenean semper, eros at gravida malesuada, nibh justo pellentesque nunc,
-            at dapibus nisi magna at enim. Suspendisse non diam diam. Aenean et ex vel quam pulvinar volutpat.
+            Aujourd'hui, disposer de son propre système métier sur-mesure permet aux entreprises de gagner en aisance et en efficacité dans la gestion de leur activité.
         </p>
     </div>
 </div>
 
 <div class="container">
-    <div class="centered-text-part">
+    <div class="infographic centered-text-part">
         <h1 class="separator">Des systèmes métiers adaptés</h1>
 
-        <p>Infographie : domaines, plateformes</p>
+        <div class="as-table">
+            <div class="as-row">
+                <div class="as-cell info-desc">
+                    <p>
+                        Nous développons des outils ayant pour but de vous accompagner dans votre activité : nous les nommons « <b>systèmes métiers</b> », car ils viennent se positionner au cœur de votre métier.
+                        <br /><br />
+                        Ces <b>systèmes</b> permettent de cadrer et de simplifier la gestion d’une activité en regroupant en un même endroit toutes les <b>informations</b> et tous les <b>processus</b> de votre entreprise. Ils permettent également <b>d’automatiser</b> certaines tâches afin de faciliter le travail de vos collaborateurs, et ainsi <b>d'améliorer</b> leur <b>productivité</b>.
+                        <br /><br />
+                        Mais les <b>systèmes métiers</b> peuvent revêtir d’autres formes, plus spécifiques, pour venir s’insérer dans votre infrastructure : service d'envoi d’e-mails ou de sms, d’analyse de données, de gestion du contenu, et bien d’autres.
+
+                    </p>
+                </div>
+
+                <div class="as-cell info-picture">
+                    <img src="~/img/info_systemes_metiers.png" width="500" />
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <div class="container">
     <div class="text-part">
-        <h1 class="separator">De l'idée à sa réalisation, les grandes étapes d'un projet</h1>
+        <h1 class="separator">De l'idée à sa réalisation, les grandes étapes d'un projet sur-mesure</h1>
 
         <div class="chrono as-table" data-role="chrono-layout">
             <div class="step as-row" data-role="step">
                 <div class="name as-cell left">
-                    Spécifications
+                    Recueil du besoin
                 </div>
                 <div class="point as-cell hidden-xs">
                     <div class="shape" data-role="point"></div>
                 </div>
                 <div class="desc as-cell">
-                    Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper. Quisque blandit ipsum quam, non feugiat est venenatis
-                    a. Donec volutpat convallis neque at efficitur. Ut justo ex, fermentum in cursus sit amet, volutpat
-                    non leo.
+                    Nous écoutons votre besoin, vos attentes.
                 </div>
             </div>
 
@@ -56,13 +69,13 @@
 
             <div class="step as-row" data-role="step">
                 <div class="name as-cell left">
-                    Réalisation
+                    Accompagnement dans la réflexion sur le besoin
                 </div>
                 <div class="point as-cell hidden-xs">
                     <div class="shape" data-role="point"></div>
                 </div>
                 <div class="desc as-cell">
-                    Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper.
+                    Il n'est pas toujours simple d'avoir en tête une image nette du produit attendu : nous échangeons avec vous autour de votre besoin afin de dessiner les contours de l'outil final.
                 </div>
             </div>
 
@@ -76,15 +89,13 @@
 
             <div class="step as-row" data-role="step">
                 <div class="name as-cell left">
-                    Recette
+                    Proposition d'une solution
                 </div>
                 <div class="point as-cell hidden-xs">
                     <div class="shape" data-role="point"></div>
                 </div>
                 <div class="desc as-cell">
-                    Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper. Quisque blandit ipsum quam, non feugiat est venenatis
-                    a. Donec volutpat convallis neque at efficitur. Ut justo ex, fermentum in cursus sit amet, volutpat
-                    non leo. Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper.
+                    Une fois le besoin clairement défini, nous vous proposons une solution pouvant y répondre.
                 </div>
             </div>
 
@@ -98,15 +109,54 @@
 
             <div class="step as-row" data-role="step">
                 <div class="name as-cell left">
-                    Livraison
+                    Réalisation du projet
                 </div>
                 <div class="point as-cell hidden-xs">
                     <div class="shape" data-role="point"></div>
                 </div>
                 <div class="desc as-cell">
-                    Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper. Quisque blandit ipsum quam, non feugiat est venenatis
-                    a. Donec volutpat convallis neque at efficitur. Ut justo ex, fermentum in cursus sit amet, volutpat
-                    non leo. Maecenas consectetur lacus sed nibh iaculis, sed interdum ligula semper.
+                    Nous réalisons le projet conformément à la solution retenue. 
+                    Durant cette phase, nous restons en contact avec vous afin de répondre au mieux à vos attentes, et de vous informer sur la progression de la réalisation.
+                </div>
+            </div>
+
+            <div class="as-row hidden-xs">
+                <div class="as-cell"></div>
+                <div class="as-cell step-link">
+                    <div data-role="steplink" class="shape"></div>
+                </div>
+                <div class="as-cell"></div>
+            </div>
+
+            <div class="step as-row" data-role="step">
+                <div class="name as-cell left">
+                    Accompagnement dans la mise en place de l'outil final
+                </div>
+                <div class="point as-cell hidden-xs">
+                    <div class="shape" data-role="point"></div>
+                </div>
+                <div class="desc as-cell">
+                    Une fois le projet terminé, nous vous accompagnons dans la mise en place de ce dernier, et formons vos collaborateurs à ce nouvel outil.
+                </div>
+            </div>
+
+            <div class="as-row hidden-xs">
+                <div class="as-cell"></div>
+                <div class="as-cell step-link">
+                    <div data-role="steplink" class="shape"></div>
+                </div>
+                <div class="as-cell"></div>
+            </div>
+
+            <div class="step as-row" data-role="step">
+                <div class="name as-cell left">
+                    Suivi après-projet
+                </div>
+                <div class="point as-cell hidden-xs">
+                    <div class="shape" data-role="point"></div>
+                </div>
+                <div class="desc as-cell">
+                    Un projet terminé continue de vivre : nous restons à votre écoute en cas d’anomalies ou si vous désirez faire évoluer votre système par la suite. 
                 </div>
             </div>
         </div>
@@ -118,41 +168,48 @@
         <h1 class="separator">Invenietis, spécialiste des systèmes métiers</h1>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tortor erat, pretium ac porttitor vitae, ultrices ut ex. Vivamus
-            aliquet gravida tristique. Pellentesque molestie scelerisque arcu. Fusce quis nunc vel tortor hendrerit vulputate.
-            Phasellus efficitur nisi mauris, nec tempus enim ultricies vel. Aenean finibus mollis justo, non egestas
-            odio posuere vel. Curabitur at suscipit enim. Cum sociis natoque penatibus et magnis dis parturient montes,
-            nascetur ridiculus mus. Curabitur quis porta est. Donec tincidunt ultricies mi quis tincidunt.
+            Nous concevons des systèmes métiers depuis plus de 10 ans, certains continuant d'évoluer aujourd'hui.
         </p>
 
         <ul>
             <li>
-                <h3>Donec in viverra mauris.</h3>
-                <br /> Fusce aliquam, ex id rutrum sagittis, nisl tellus rhoncus eros, eget rhoncus sapien arcu in erat. Etiam
-                sed nisl est. Proin vitae imperdiet enim. Vestibulum quis interdum purus. Mauris imperdiet mi ac mauris
-                semper maximus. Integer sed consequat nisl.
+                <h3>Une réalisation sur mesure</h3>
+                <br />Nous réalisons des outils spécifiquement adaptés à vos besoins.
             </li>
             <li>
-                <h3>Fusce in interdum magna.</h3>
-                <br /> Curabitur sed nisl tempus ipsum congue viverra. Nulla facilisi. Nunc euismod dolor a nulla porta, iaculis
-                condimentum ipsum euismod. Aenean semper, eros at gravida malesuada, nibh justo pellentesque nunc, at
-                dapibus nisi magna at enim. Suspendisse non diam diam. Aenean et ex vel quam pulvinar volutpat.
+                <h3>Un système durable et ouvert aux changements</h3>
+                <br />Notre expertise en ingénierie logicielle nous permet de concevoir des systèmes pérennes et évolutifs.
             </li>
             <li>
-                <h3>Sed auctor ut erat et tempus.</h3>
-                <br /> Maecenas nisl tortor, congue vitae velit ac, semper rhoncus sapien. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Morbi vulputate in mi eu laoreet. Suspendisse vehicula metus id ex eleifend accumsan.
-                Nulla non tincidunt arcu.
+                <h3>Des technologies connues et éprouvées</h3>
+                <br />Nous travaillons principalement avec des technologies Microsoft qui ont su prouver leur robustesse et leur efficacité au fil des années.
+                Nous utilisons également des technologies open-source fiables et activement maintenues.
             </li>
         </ul>
     </div>
 </div>
 
 <div class="container">
-    <div class="centered-text-part">
+    <div class="infographic centered-text-part">
         <h1 class="separator">Votre projet en toute agilité</h1>
 
-        <p>Infographie : gestion de projet</p>
+        <div class="as-table">
+            <div class="as-row">
+                <div class="as-cell info-desc">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tortor erat, pretium ac porttitor vitae, ultrices ut ex. Vivamus
+                        aliquet gravida tristique. Pellentesque molestie scelerisque arcu. Fusce quis nunc vel tortor hendrerit vulputate.
+                        Phasellus efficitur nisi mauris, nec tempus enim ultricies vel. Aenean finibus mollis justo, non egestas
+                        odio posuere vel. Curabitur at suscipit enim. Cum sociis natoque penatibus et magnis dis parturient montes,
+                        nascetur ridiculus mus. Curabitur quis porta est. Donec tincidunt ultricies mi quis tincidunt.
+                    </p>
+                </div>
+
+                <div class="as-cell info-picture">
+                    <img src="~/img/info_gestion_projet.png" width="500" />
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
