--- a/Invenietis.Web/Views/Home/Index.fr.cshtml
+++ b/Invenietis.Web/Views/Home/Index.fr.cshtml
@@ -119,8 +119,7 @@
                             <img src="/img/wedowork.png" />
                             <h2>Systèmes métiers</h2>
                             <p data-role="equal-element">
-                                Notre exigence est de mettre le meilleur de la technologie actuelle au service de <b>l’ingénierie logicielle</b>                                
-                                et de l’industrialisation des projets que nous réalisons.
+                                Notre <b>expertise</b> s'associe au meilleur de la <b>technologie</b> afin de réaliser des systèmes <b>durables et évolutifs</b> qui accompagnent et facilitent votre activité.
                             </p>
 
                             <a asp-culture="fr" asp-route-id="Home.BusinessSystems">En savoir plus</a>
@@ -129,7 +128,7 @@
                             <img src="/img/wedoadvice.png" />
                             <h2>Conseil</h2>
                             <p data-role="equal-element">
-                                Audits, études de faisabilités : Invenietis accompagne vos projets existants ou futurs.
+                                TODO
                             </p>
 
                             <a asp-culture="fr" asp-route-id="Home.Consulting">En savoir plus</a>
@@ -138,8 +137,8 @@
                             <img src="/img/wedolearning.png" />
                             <h2>Formation</h2>
                             <p data-role="equal-element">
-                                <b>Passionnés d’aspects techniques</b>, nous avons toujours fait en sorte de travailler sur
-                                des technologies de pointe et porteuses d’avenir. Ecoles, entreprises : <b>nous vous transmettons ce savoir</b>.
+                                Nous avons toujours fait en sorte de travailler sur des technologies de pointe et porteuses d’avenir. 
+                                Ecoles, entreprises : <b>nous vous transmettons ce savoir</b>.
                             </p>
 
                             <a asp-culture="fr" asp-route-id="Learning.Index">En savoir plus</a>
