--- a/Invenietis.Web/Views/Shared/_Footer.fr.cshtml
+++ b/Invenietis.Web/Views/Shared/_Footer.fr.cshtml
@@ -10,7 +10,7 @@
                 <h1>Invenietis</h1>
 
                 <p>
-                    28 rue Godefroy Cavaignac
+                    10 rue Mercoeur
                     <br />75011 PARIS
                 </p>
 
