--- a/Invenietis.Web/wwwroot/less/global.less
+++ b/Invenietis.Web/wwwroot/less/global.less
@@ -175,7 +175,8 @@ body {
     .step {
         .name {
             font-size: 20pt;
-            vertical-align: middle;  
+            vertical-align: middle;
+            line-height: 1.5em;  
             
             &.left {
                 text-align: right;
