--- a/Invenietis.Web/wwwroot/less/page.less
+++ b/Invenietis.Web/wwwroot/less/page.less
@@ -3,9 +3,9 @@
 .header-banner {
     position: relative;
     margin-top: 50px;
-    color:white; 
+    color: white;
     background-color: @inv-grey;
-    
+
     .photo {
         z-index: 0;
         position: absolute;
@@ -13,65 +13,94 @@
         background-size: cover;
         width: 100%;
         height: 100%;
-    } 
-    
+    }
+
     .content {
-        position: relative; 
-        z-index: 1;     
+        position: relative;
+        z-index: 1;
         width: 100%;
         padding: 40px;
-        color: white;    
-        .text-black-shadow(0.50); 
-        
+        color: white;
+        .text-black-shadow(0.50);
+
         h1 {
             margin-top: 10px;
             margin-bottom: 10px;
             color: white;
-        }            
-    }  
+        }
+    }
+}
+
+.infographic {
+    img {
+        margin: 25px;
+    }
+
+    .as-table {
+        .info-picture {
+            vertical-align: middle;
+            text-align: center;
+        }
+
+        .info-desc {
+            vertical-align: middle;
+        }
+    }
+
+    @media(max-width: 768px) {
+        .as-table, .as-row, .as-cell {
+            display: block;
+        }
+
+        img {
+            margin: 25px 0 25px 0;
+            max-width: 100%;
+        }
+    }
 }
 
 .reasons-block {
-    h2 {        
-        i {                                                    
+    h2 {
+        i {
             display: inline-block;
             color: @inv-orange-first;
         }
     }
 }
 
-.text-with-photo {    
+.text-with-photo {
     .as-table {
         margin-left: -20px;
         border-spacing: 20px 0px;
     }
-    
+
     .photo {
         img {
             padding: 5px;
             .box-black-shadow(0.15);
         }
     }
-    
+
     .content {
         vertical-align: top;
     }
-        
+
     @media(max-width: 768px) {
         & {
-            margin-top: 50px;            
+            margin-top: 50px;
         }
+
         .as-table, .as-row, .as-cell {
             display: block;
         }
-        
+
         .as-table {
             margin-left: 0;
         }
-               
-        .photo { 
+
+        .photo {
             text-align: center;
-                     
+
             img {
                 max-width: 100%;
             }
@@ -84,19 +113,19 @@
         margin: 0;
         padding: 0;
         list-style: none;
-        
+
         li {
             padding: 5px 0 5px 0;
-            
+
             &:before {
                 content: "\e013";
                 font-family: 'Glyphicons Halflings';
                 font-size: 16pt;
                 color: @inv-orange-first;
                 margin-right: 10px;
-            }    
+            }
         }
-    }    
+    }
 }
 
 .quote-block {
@@ -105,14 +134,14 @@
     margin-bottom: 21px;
     padding: 25px;
     background-color: #eceae8;
-    
+
     p {
         font-family: @font-family-serif;
         padding-left: 30px;
         padding-right: 30px;
         font-size: 12pt;
     }
-    
+
     .open-quote {
         margin-top: -45px;
         margin-left: 20px;
@@ -121,24 +150,25 @@
         position: absolute;
         background-image: url('../img/open_quote.png');
         width: 80px;
-        height: 64px; 
+        height: 64px;
     }
-    
+
     .close-quote {
         bottom: 0;
         right: 0;
         margin-bottom: -45px;
         margin-right: 20px;
-        position: absolute;        
+        position: absolute;
         background-image: url('../img/close_quote.png');
         width: 80px;
-        height: 64px;     
+        height: 64px;
     }
-    
+
     .author {
         padding-right: 30px;
         text-align: right;
         font-weight: bold;
+
         &:before {
             content: "- ";
         }
