Fixes, edit, footer

--- a/Invenietis.Web/Views/Home/Index.en.cshtml
+++ b/Invenietis.Web/Views/Home/Index.en.cshtml
@@ -28,8 +28,8 @@
 
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <div id="bg-full-banner">
-                        <div id="bg-full-banner-output"></div>
+                    <div id="bg-full-banner" data-role="polygons-container" data-light-ambient="#0c0c0c" data-light-diffuse="#141414">
+                        <div id="bg-full-banner-output" data-role="polygons-output"></div>
                         <div class="bg-shader-noise"></div>
                     </div>
 
@@ -105,8 +105,9 @@
         </div>
 
         <div class="what-we-do colored-part">
-            <div id="bg-what-we-do">
-                <div id="bg-what-we-do-output"></div>
+            <div id="bg-what-we-do" data-role="polygons-container" data-mesh-ambient="#555555" data-mesh-diffuse="#FFFFFF" data-light-ambient="#880066"
+                 data-light-diffuse="#ff8800" data-light-zoffset="20">
+                <div id="bg-what-we-do-output" data-role="polygons-output"></div>
                 <div class="bg-shader-noise"></div>
             </div>
 
