--- a/Invenietis.Web/Views/Shared/_Header.en.cshtml
+++ b/Invenietis.Web/Views/Shared/_Header.en.cshtml
@@ -37,7 +37,7 @@
                     </ul>
                 </li>
                 <li><a asp-route-id="Projects.Index" asp-culture="en">Réalisations</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="http://blog.invenietis.com">Blog</a></li>
             </ul>
         </div>
     </div>
