--- a/Invenietis.Web/Views/Home/Index.fr.cshtml
+++ b/Invenietis.Web/Views/Home/Index.fr.cshtml
@@ -129,7 +129,7 @@
                             <img src="/img/wedoadvice.png" />
                             <h2>Conseil</h2>
                             <p data-role="equal-element">
-                                TODO
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a convallis ante, et facilisis risus. Integer sodales, libero eget venenatis pharetra, tellus velit ultrices eros, vel ullamcorper dui tortor vel arcu.
                             </p>
 
                             <a asp-culture="fr" asp-route-id="Home.Consulting">En savoir plus</a>
@@ -171,7 +171,7 @@
                                 <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                                 <div class="controls">
-                                    <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                                    <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                                 </div>
                             </div>
                             <div class="caption">
@@ -186,7 +186,7 @@
                                 <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                                 <div class="controls">
-                                    <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                                    <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                                 </div>
                             </div>
                             <div class="caption">
@@ -201,7 +201,7 @@
                                 <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                                 <div class="controls">
-                                    <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                                    <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                                 </div>
                             </div>
                             <div class="caption">
