--- a/Invenietis.Web/Views/Learning/Index.fr.cshtml
+++ b/Invenietis.Web/Views/Learning/Index.fr.cshtml
@@ -108,7 +108,7 @@
                                 <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                                 <div class="controls">
-                                    <a asp-culture="fr" asp-route-id="Learning.GetTraining" asp-params="id: 1, name: une-formation" class="btn btn-default">+ d'infos</a>
+                                    <a asp-culture="fr" asp-route-id="Learning.GetTraining" asp-params="id: 1, name: sample-training" class="btn btn-default">+ d'infos</a>
                                 </div>
                             </div>
                             <div class="caption">
@@ -124,7 +124,7 @@
                                 <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                                 <div class="controls">
-                                    <a asp-culture="fr" asp-route-id="Learning.GetTraining" asp-params="id: 1, name: une-formation" class="btn btn-default">+ d'infos</a>
+                                    <a asp-culture="fr" asp-route-id="Learning.GetTraining" asp-params="id: 1, name: sample-training" class="btn btn-default">+ d'infos</a>
                                 </div>
                             </div>
                             <div class="caption">
@@ -140,7 +140,7 @@
                                 <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                                 <div class="controls">
-                                    <a asp-culture="fr" asp-route-id="Learning.GetTraining" asp-params="id: 1, name: une-formation" class="btn btn-default">+ d'infos</a>
+                                    <a asp-culture="fr" asp-route-id="Learning.GetTraining" asp-params="id: 1, name: sample-training" class="btn btn-default">+ d'infos</a>
                                 </div>
                             </div>
                             <div class="caption">
