--- a/Invenietis.Web/Views/Projects/Index.fr.cshtml
+++ b/Invenietis.Web/Views/Projects/Index.fr.cshtml
@@ -50,7 +50,7 @@
                         <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                         <div class="controls">
-                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                         </div>
                     </div>
                     <div class="caption">
@@ -65,7 +65,7 @@
                         <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                         <div class="controls">
-                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                         </div>
                     </div>
                     <div class="caption">
@@ -80,7 +80,7 @@
                         <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                         <div class="controls">
-                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                         </div>
                     </div>
                     <div class="caption">
@@ -96,7 +96,7 @@
                         <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                         <div class="controls">
-                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                         </div>
                     </div>
                     <div class="caption">
@@ -112,7 +112,7 @@
                         <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                         <div class="controls">
-                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                         </div>
                     </div>
                     <div class="caption">
@@ -128,7 +128,7 @@
                         <img src="http://placehold.it/350x200" alt="Thumbnail">
 
                         <div class="controls">
-                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: un-projet" class="btn btn-default">+ d'infos</a>
+                            <a asp-culture="fr" asp-route-id="Projects.GetProject" asp-params="id: 1, name: sample-project" class="btn btn-default">+ d'infos</a>
                         </div>
                     </div>
                     <div class="caption">
