--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -39,7 +39,7 @@
                         <strong class="lead">Technical Center :</strong><br /><br />
                         <address>
                             <strong>Invenietis</strong><br />
-                            28 rue Godefroy Cavaignac<br>
+                            10, rue Mercoeur<br>
                             75011 - Paris<br>
                             France
                         </address>
@@ -62,11 +62,11 @@
             <address>
                 <img src="/Content/images/marcker.png" alt="logo" />
                 <strong>Invenietis - Technical Center</strong><br />
-                28 rue Godefroy Cavaignac<br>
+                10, rue Mercoeur<br>
                 75011 - Paris<br>
                 France
             </address>
-            <a target="_blank" href="https://www.google.fr/maps/place/28+Rue+Godefroy+Cavaignac,+75011+Paris/48.8557197,2.3811039,17z/data=!4m7!1m4!3m3!1s0x47e66df62b72e369:0xe95d907aa3d84d46!2s28+Rue+Godefroy+Cavaignac,+75011+Paris!3b1!3m1!1s0x47e66df62b72e369:0xe95d907aa3d84d46">Voir sur Google Map</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/10+Rue+Mercoeur,+75011+Paris/48.8572848,2.381852,17z/data=!3m1!4b1!4m5!3m4!1s0x47e66df5d828cd6f:0xa587361c2184b991!8m2!3d48.8572848!4d2.384046">Voir sur Google Maps</a>
         </div>
     </div>
     <div id="infomapHQ">
@@ -78,7 +78,7 @@
                 75020 - Paris<br>
                 France
             </address>
-            <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+            <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Maps</a>
         </div>
     </div>
 
@@ -139,9 +139,10 @@
 
 
             var bounds = new google.maps.LatLngBounds();
-
+		@* https://www.google.fr/maps/place/10+Rue+Merc%C5%93ur,+75011+Paris/@48.857316,2.3838722,20.49z/data=!4m13!1m7!3m6!1s0x47e66df5d828cd6f:0xa587361c2184b991!2s10+Rue+Merc%C5%93ur,+75011+Paris!3b1!8m2!3d48.8572848!4d2.384046!3m4!1s0x47e66df5d828cd6f:0xa587361c2184b991!8m2!3d48.8572848!4d2.384046!6m1!1e1?hl=fr
+			48.8572848!4d2.384046*@
             var markerTech = new google.maps.Marker({
-                position: new google.maps.LatLng(48.85571969999999, 2.381103899999971),
+                position: new google.maps.LatLng(48.8572848, 2.384046),
                 title: 'Invenietis - Technical Center',
                 zoomControl: true,
                 map: map,
