--- a/InvenietisPortal/Views/Shared/_Layout.en.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.en.cshtml
@@ -85,7 +85,7 @@
                                 <strong>Invenietis</strong>
                                 <a class="minimap" href="@Url.Action( "Contact" )"></a>
 
-                                28 rue Godefroy Cavaignac<br>
+                                10, rue Mercoeur<br>
                                 75011 - Paris<br>
                                 France<br /><br />
                                 Mail: <a href="mailto:contact@invenietis.com">contact@invenietis.com</a><br />
