--- a/InvenietisPortal/Views/Home/Contact.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.fr.cshtml
@@ -39,7 +39,7 @@
                         <strong class="lead">Centre technique :</strong><br /><br />
                         <address>
                             <strong>Société Invenietis</strong><br />
-                            28 rue Godefroy Cavaignac<br>
+                            10, rue Mercoeur<br>
                             75011 - Paris<br>
                             France
                         </address>
@@ -48,7 +48,7 @@
                         <strong class="lead">Siège social :</strong><br /><br />
                         <address>
                             <strong>Société Invenietis</strong><br />
-                            23 rue Pelleport <br />
+                            23, rue Pelleport <br />
                             75020 - Paris<br>
                             France
                         </address>
@@ -62,11 +62,11 @@
             <address>
                 <img src="/Content/images/marcker.png" alt="logo" />
                 <strong>Invenietis - Centre technique</strong><br />
-                28 rue Godefroy Cavaignac<br>
+                10, rue Mercoeur<br>
                 75011 - Paris<br>
                 France
             </address>
-            <a target="_blank" href="https://www.google.fr/maps/place/28+Rue+Godefroy+Cavaignac,+75011+Paris/48.8557197,2.3811039,17z/data=!4m7!1m4!3m3!1s0x47e66df62b72e369:0xe95d907aa3d84d46!2s28+Rue+Godefroy+Cavaignac,+75011+Paris!3b1!3m1!1s0x47e66df62b72e369:0xe95d907aa3d84d46">Voir sur Google Map</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/10+Rue+Mercoeur,+75011+Paris/48.8572848,2.381852,17z/data=!3m1!4b1!4m5!3m4!1s0x47e66df5d828cd6f:0xa587361c2184b991!8m2!3d48.8572848!4d2.384046">Voir sur Google Map</a>
         </div>
     </div>
     <div id="infomapHQ">
@@ -141,7 +141,7 @@
             var bounds = new google.maps.LatLngBounds();
 
             var markerTech = new google.maps.Marker({
-                position: new google.maps.LatLng(48.85571969999999, 2.381103899999971),
+                position: new google.maps.LatLng(48.8572848, 2.384046),
                 title: 'Invenietis - Centre technique',
                 zoomControl: true,
                 map: map,
